manifests/kafka-networkpolicies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: kafka
spec:
  podSelector: {}
  policyTypes:
  - Ingress
