manifests/kafka-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: kcluster-allow-all
  namespace: kafka
spec:
  podSelector:
    matchLabels:
      strimzi.io/name: kcluster-kafka
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: schema-registry
